hphp/hack/test/typecheck/constraints/classmeth_constraints_bad.php.exp
File "classmeth_constraints_bad.php", line 11, characters 6-6:
Invalid argument (Typing[4110])
  File "classmeth_constraints_bad.php", line 6, characters 39-42:
  Some type constraint(s) are violated here
  File "classmeth_constraints_bad.php", line 6, characters 34-34:
  T is a constrained type parameter
  File "classmeth_constraints_bad.php", line 6, characters 39-42:
  This is an object of type Base
  File "classmeth_constraints_bad.php", line 11, characters 6-6:
  It is incompatible with an int
